--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ pandas = "^2.2.3"
 tqdm = "^4.66.5"
 openai = "^1.51.2"
 nltk = "^3.9.1"
+matplotlib = "^3.9.2"
+seaborn = "^0.13.2"
+jinja2 = "^3.1.4"
 
 
 [build-system]
