--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ together = "^1.3.1"
 python-dotenv = "^1.0.1"
 anthropic = "^0.45.2"
 plotly = "^6.0.1"
+openpyxl = "^3.1.5"
+more-itertools = "^10.7.0"
+scipy = "^1.15.3"
 
 
 [build-system]
